--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,6 @@
 [build]
-  publish = "build"
+  publish = "dist" # Make sure  this points to your build folder
+  command="npm run build" # Adjust this  if your build command is different
 
 [[redirects]]
   from = "/*"
